@@ -15,6 +15,9 @@ if(require(MASS)) {
     x3 <- mvrnorm(n, rep(0,p), Sig) >= 0
     x <- cbind(x3, rbinom(n, size=1, prob = 1/2))
 
-    (mx <- mona(x))
+    print(sapply(as.data.frame(x), table))
+
+    mx <- mona(x)
     str(mx)
+    print(lapply(mx[c(1,3,4)], table))
 }
