@@ -1,17 +1,19 @@
 
-R : Copyright 2003, The R Development Core Team
-Version 1.8.0 Under development (unstable) (2003-06-02)
+R version 2.4.0 Under development (unstable) (2006-08-23 r38963)
+Copyright (C) 2006 The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
-Type `license()' or `licence()' for distribution details.
+Type 'license()' or 'licence()' for distribution details.
 
 R is a collaborative project with many contributors.
-Type `contributors()' for more information.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
 
-Type `demo()' for some demos, `help()' for on-line help, or
-`help.start()' for a HTML browser interface to help.
-Type `q()' to quit R.
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
 
 > library(cluster)
 > 
@@ -74,10 +76,16 @@ List of 6
 +     x3 <- mvrnorm(n, rep(0,p), Sig) >= 0
 +     x <- cbind(x3, rbinom(n, size=1, prob = 1/2))
 + 
-+     (mx <- mona(x))
++     print(sapply(as.data.frame(x), table))
++ 
++     mx <- mona(x)
 +     str(mx)
++     print(lapply(mx[c(1,3,4)], table))
 + }
-Loading required package: MASS 
+Loading required package: MASS
+   V1  V2  V3  V4
+0 269 264 258 238
+1 243 248 254 274
 List of 5
  $ data    : int [1:512, 1:4] 1 1 1 1 0 0 0 1 0 1 ...
  $ order   : int [1:512] 1 4 8 10 12 15 34 38 39 51 ...
@@ -85,6 +93,21 @@ List of 5
  $ step    : int [1:511] 0 0 0 0 0 0 0 0 0 0 ...
  $ call    : language mona(x = x)
  - attr(*, "class")= chr "mona"
-Warning message: 
+$data
+
+   0    1 
+1029 1019 
+
+$variable
+
+  0   1   2   3   4 
+496   3   1   6   5 
+
+$step
+
+  0   1   2   3   4 
+496   1   2   4   8 
+
+Warning message:
 Buggy version of Kinderman-Ramage generator used. in: RNGkind("Marsaglia-Multicarry", "Buggy Kinderman-Ramage") 
 > 
